# aoc

./: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  astar.js  imp.js  maze.js  notes.md  package-lock.json  package.json  parse.js  sets.js  utils.js
year-2021/: Cargo.toml
year-2021/day-01/: history.json  solution.js  solution.py  solution.rs
year-2021/day-02/: history.json  solution.js  solution.py  solution.rs
year-2021/day-03/: history.json  solution.js  solution.rs
year-2021/day-04/: history.json  solution.js  solution.rs
year-2021/day-05/: history.json  solution.js
year-2021/day-06/: history.json  solution.js
year-2021/day-07/: history.json  solution.js  solution.rs
year-2021/day-08/: history.json  solution.js  solution.rs
year-2021/day-09/: history.json  solution.js
year-2021/day-10/: history.json  solution.js
year-2021/day-11/: history.json  solution.js
year-2021/day-12/: history.json  solution.js
year-2021/day-13/: history.json  solution.js
year-2021/day-14/: history.json  solution.js
year-2021/day-15/: history.json  solution.js  solution.rs
year-2021/day-16/: history.json  solution.js
year-2021/day-17/: history.json  solution.js
year-2021/day-18/: history.json  solution.js
year-2021/day-19/: history.json  solution.js
year-2021/day-20/: history.json  solution.js
year-2021/day-21/: history.json  solution.js
year-2021/day-22/: history.json  solution.js
year-2021/day-23/: history.json  solution.js
year-2021/day-24/: history.json  solution.js
year-2021/day-25/: history.json  (+1 more)
(+142 files in other folders)
