[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
peg = "0.7.0"


[[bin]]
name = "day-01"
path = "day-01/solution.rs"


[[bin]]
name = "day-02"
path = "day-02/solution.rs"

[[bin]]
name = "day-03"
path = "day-03/solution.rs"