[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
howlong = "0.1.7"
itertools = "0.10.1"
peg = "0.7.0"
rayon = "1.5.1"
regex = "1.5.4"


[[bin]]
name = "day-01"
path = "day-01/solution.rs"


[[bin]]
name = "day-02"
path = "day-02/solution.rs"

[[bin]]
name = "day-03"
path = "day-03/solution.rs"

[[bin]]
name = "day-04"
path = "day-04/solution.rs"

[[bin]]
name = "day-05"
path = "day-05/solution.rs"

[[bin]]
name = "day-06"
path = "day-06/solution.rs"

[[bin]]
name = "day-07"
path = "day-07/solution.rs"
